# panel-3d-model-viewer-antigravity

./: .gitignore  AGENTS.md  DEV.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: 00_minimal.py  01_basic.py  02_custom_style.py  03_interactions.py  04_app_layout.py  05_multi_view.py  06_fox.py
panel_model_viewer/: __init__.py  viewer.js  viewer.py
scripts/: download_assets.py
temp/pytest-of-cdeil/: pytest-current
temp/pytest-of-cdeil/pytest-0/: test_src_path_handlingcurrent
temp/pytest-of-cdeil/pytest-1/: test_src_path_handlingcurrent
tests/: test_viewer.py
tests/ui/: test_examples.py  test_ui.py  test_visual.py
